# cuhara.qua.go/internal/types/create_role_response.go
@@ -1,0 +1,50 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package types
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// CreateRoleResponse create role response
+//
+// swagger:model createRoleResponse
+type CreateRoleResponse struct {
+
+	// id
+	ID int64 `json:"id,omitempty"`
+}
+
+// Validate validates this create role response
+func (m *CreateRoleResponse) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this create role response based on context it is used
+func (m *CreateRoleResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *CreateRoleResponse) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *CreateRoleResponse) UnmarshalBinary(b []byte) error {
+	var res CreateRoleResponse
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
